# electrum_jsonrpc

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh
docker/electrum/: Dockerfile  docker-entrypoint.sh
src/: btc.rs  constants.rs  error.rs  ext.rs  lib.rs  main.rs
tests/: calling_rpc_methods.rs
