[package]
name = "bitcoin_mixer"
version = "0.1.0"
authors = ["fomotoshi <fomotoshi@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
hyper = { version = "0.14.4", features = ["full"] }
base64 = "0.13.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"