[package]
name = "electrum_jsonrpc"
version = "0.3.8"
authors = ["fomotoshi <fomotoshi@ya.ru>"]
edition = "2018"
description = "Simple library for interaction with Electron client daemon through json-rpc."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ChzenChzen/electrum_jsonrpc"

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
hyper = { version = "0.14.4", features = ["full"] }
base64 = "0.13.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
lazy_static = "1.4.0"